fixing the gap

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -106,7 +106,8 @@ a.secondary {
   flex-shrink: 0;
 }
 .gridContainer{
-  margin-top: 10%;
+  margin-top: 5%;
+  gap: 10%;
 }
 
 .profileImg{
